--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This project was created with Parcel. For familiarization and setting additional features [refer to documentation](https://parceljs.org/).",
   "homepage": "https://github.com/Andrii-kyryliuk11/goit-js-hw-08",
   "scripts": {
-    "start": "parcel src/*.html --no-cache",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/ --no-cache"
+    "start": "parcel src/*.html",
+    "build": "parcel build src/*.html --public-url /parcel-project-template/"
   },
   "repository": {
     "type": "git",
